# SphericalRemesh

./: CMakeLists.txt  LICENSE  README.md
src/: SphericalRemeshing.cpp  SphericalRemeshing.h
wrapper/: PARSE_ARGS.h  SRemesh.xml  main.cpp
